[package]
name = "stele"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"]}
dotenvy = "0.15"
serde = { version = "1", features = ["derive"]}
qrcode = "0.14.1"
image = "0.25.10"