[package]
name = "stele"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart"] }
dotenvy = "0.15"
image = "0.25.10"
qrcode = "0.14.1"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"]}
thiserror="2.0.18"
tokio = { version = "1", features = ["full"] }
tower-sessions = "0.15.0"
tower-sessions-core = "0.15"
# Pinned to git until 0.15.1 is published with tower-sessions-core 0.15 fix
tower-sessions-sqlx-store = { git = "https://github.com/maxcountryman/tower-sessions-stores", features = ["postgres"] }
# tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
uuid = { version = "1", features = ["v4"] }